# rag-cooking-agent

./: README.md
AI-AGENTIC-cooking-agent/: README.md
AI-AGENTIC-cooking-agent/Evaluation-finale/: README.md  generate_graph.py  graph.mmd  ingest.py  main.py  pyproject.toml
AI-AGENTIC-cooking-agent/Evaluation-finale/evaluation/: questions.py  run_evaluation.py
AI-AGENTIC-cooking-agent/Evaluation-finale/src/: config.py  graph.py  llm.py  state.py
AI-AGENTIC-cooking-agent/Lab1-prompt-engineering/: 01_tokenisation.py  02_ollama_prompt.py  03_groq_prompt.py  04_openai_prompt.py  05_aspect_sentiment_json.py  06_image_generation.py  07_image_description.py  1 TP Ingénierie des prompts.docx  README.md  pyproject.toml
AI-AGENTIC-cooking-agent/Lab2-langchain-agents/: 2 TP Agents avec Langchain.docx  2 TP Agents avec Langchain.odt  README.md  chef_personnel_agent.py  requirements.txt
AI-AGENTIC-cooking-agent/Lab3-RAG/: README.md  part1_rag_pdf.py  part2_sql_agent.py
AI-AGENTIC-cooking-agent/Lab4-MCP/: 4 TP Agent MCP.odt  README.md  agentMCP.py  agentMCPDistant.py  agentMCPTime.py  mcp_http_server.py  mcp_local_server.py  pyproject.toml
AI-AGENTIC-cooking-agent/Lab5-LangGraph_Studio/: 5 TP Langraph Studio.odt  8 TP Multi-Agents.odt  README.md  agent_simple.py  langgraph.json  multi_agents.py  pyproject.toml
AI-AGENTIC-cooking-agent/Lab6-Contexte_et_Etat/: 7 TP Agent avec état et contexte.odt  README.md  agent_context.py  agent_state.py  pyproject.toml
AI-AGENTIC-cooking-agent/Lab7-Human_In_The_Loop/: 6 TP Agent HITL.odt  README.md  agent_hitl.py  pyproject.toml
AI-AGENTIC-cooking-agent/Lab8-Workflow_avec_LangGraph/: README.md  TP Workflows_langgraph.odt  conditional_workflow.py  hello_graph.py  message_state.py  pyproject.toml  reducers_demo.py  workflow_loop.py
AI-AGENTIC-cooking-agent/TP-Chef_personnel/: README.md  app.py  chef_agent.py  exercice.md  pyproject.toml  recipes.txt
(+8 files in other folders)
